# Groot

./: README.md
src/basecore/include/: basic.h
src/basecore/include/app/: ncIAppConfig.h  ncIniAppConfig.h  ncJson.h  ncJson.inl
src/basecore/include/lang/: Exception.h  string.h
src/basecore/include/text/: base64.h
src/basecore/include/util/: i18n_error.h  ncSingleton.h
src/basecore/src/app/: ncIAppConfig.cpp  ncIniAppConfig.cpp
src/basecore/src/lang/: exception.cpp  string.cpp
src/basecore/src/text/: base64.cpp
src/basecore/test/: CMakeLists.txt  main.cpp
